update package.json metadata

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "chakraui-barplot-react-app",
+  "name": "react-html-plots",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bouzidanas.github.io/react-html-plots",
   "dependencies": {
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
