--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.1",
-    "@types/dompurify": "^3.0.3",
     "@types/jest": "^28.1.8",
     "@types/node": "^12.20.55",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
-    "dompurify": "^3.0.6",
+    "isomorphic-dompurify": "^1.9.0",
     "framer-motion": "^6.5.1",
     "gh-pages": "^6.0.0",
     "react": "^18.2.0",
