add and configure rollup

--- a/package.json
+++ b/package.json
@@ -1,13 +1,30 @@
 {
   "name": "react-html-plots",
-  "version": "0.1.0",
+  "version": "0.0.1",
+  "description": "A React component library for creating HTML plots",
+  "author": {
+    "name": "Bouzid Anas",
+    "email": "anas.bouzid@bezda.net"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://bouzidanas.github.io/react-html-plots"
+  },
   "private": true,
   "homepage": "https://bouzidanas.github.io/react-html-plots",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "dist/esm/index.d.ts",
   "dependencies": {
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@legendapp/state": "^1.11.1",
+    "@rollup/plugin-json": "^6.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.1",
@@ -15,13 +32,12 @@
     "@types/node": "^12.20.55",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
-    "isomorphic-dompurify": "^1.9.0",
     "framer-motion": "^6.5.1",
     "gh-pages": "^6.0.0",
+    "isomorphic-dompurify": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
-    "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -31,7 +47,8 @@
     "start": "GENERATE_SOURCEMAP=false react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "rollup": "rollup -c"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -49,6 +66,21 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
+    "@babel/plugin-transform-private-property-in-object": "^7.22.11",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "react-scripts": "^5.0.1",
+    "rollup": "^4.1.4",
+    "rollup-plugin-dts": "^6.1.0",
+    "tslib": "^2.6.2"
+  },
+  "overrides": {
+    "nth-check": "2.0.1",
+    "rollup-plugin-terser": "@rollup/plugin-terser@0.4.4"
+  },
+  "resolutions": {
+    "postcss": "^8.4.31"
   }
 }
